# Script2Video

./: .env.example  3d_print_ad.json  CLAUDE.md  README.md  README_MCP.md  main.py  mcp_config.json  pyproject.toml  run_mcp_server.py  test.json  test_mcp_server.py  test_output.json
.claude/: settings.local.json
docs/: MCP_SERVER_GUIDE.md  TTS_GUIDE.md
src/script2video/: __init__.py  __main__.py  mcp_server.py
src/script2video/api/: builders.py  draft.py
src/script2video/effects/: __init__.py  base.py  builtin.py
src/script2video/models/: base.py  clips.py  draft.py
src/script2video/renderer/: constants.py  engine.py  utils.py
src/script2video/renderer/processors/: __init__.py  base.py  bgm.py  drawtext.py  effect.py  factory.py  helpers.py  image.py  video.py  voice.py
src/script2video/tts/: __init__.py  azure.py  base.py  dashscope.py  edge.py  utils.py
